--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -1,12 +1,13 @@
 ﻿@page "/"
 @using BlazorApp.Components  
-@inject ToastService ToastServices  
+@inject ToastService ToastService 
+
 <button class="e-btn" @onclick="@ShowToast"> Show Toast</button>  
   
 @code {  
     private void ShowToast()  
     {  
-        this.ToastServices.Open(new ToastOption()  
+        this.ToastService.ShowToast(new ToastOption()  
         {  
             Title = "Toast Title",  
             Content = "Toast content", // Dynamic Content  
