--- a/BlazorApp/Pages/Index.razor
+++ b/BlazorApp/Pages/Index.razor
@@ -10,7 +10,7 @@
         this.ToastService.ShowToast(new ToastOption()  
         {  
             Title = "Toast Title",  
-            Content = "Toast content", // Dynamic Content  
+            Content = "Toast content"
         });  
     }  
 }  
